--- a/jobswire_case/pubspec.yaml
+++ b/jobswire_case/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #dio
+  dio: ^4.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
