--- a/jobswire_case/pubspec.yaml
+++ b/jobswire_case/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   #states
   provider : ^6.0.2
 
+  #animation
+  lottie : ^1.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
