hero animation and fonts

--- a/jobswire_case/pubspec.yaml
+++ b/jobswire_case/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   #animation
   lottie : ^1.2.2
 
+  #fonts
+  google_fonts: ^2.3.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
